--- a/inc/inc-admin/src/main/resources/application-dev.yml
+++ b/inc/inc-admin/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/inc?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
-    password: root
+    password: 123456
 app:
   #服务器配置
   #filePath: /Users/zhangdi/home/proj/inc/uploaded_files/
