--- a/inc/inc-admin/src/main/resources/application-pro.yml
+++ b/inc/inc-admin/src/main/resources/application-pro.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/inc?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: inc
-    password: Inc@1234
+    password: 123456
 app:
   #服务器配置
   filePath: /home/www/inc/app/uploaded_files/
