--- a/inc/inc-view/package.json
+++ b/inc/inc-view/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "canvas": "^2.11.2",
     "echarts": "^3.7.1",
     "element-ui": "^2.0.7",
+    "encoding": "^0.1.13",
     "express": "^4.16.3",
     "fabric": "2.3.6",
     "fabric-customise-controls": "2.0.6-beta",
@@ -44,7 +46,6 @@
     "function-bind": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
-    "node-sass": "^4.12.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "ora": "^1.3.0",
