--- a/inc/inc-view/package.json
+++ b/inc/inc-view/package.json
@@ -50,7 +50,8 @@
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "ora": "^1.3.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
+    "node-sass": "^4.0.0",
     "semver": "^5.4.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.9",
